spade-tests/src/snapshots/spade_tests__ast_lowering__undefined_label_error.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(3) main(clk: clock) -> int<8> {
    reg;
        'a
        let x = 0u8;
    reg;
    reg;
        stage(b).x
}

error: Lexer error, unexpected symbol
  ┌─ testinput:3:9
  │  
3 │ ╭         'a
4 │ │         let x = 0u8;
5 │ │     reg;
6 │ │     reg;
7 │ │         stage(b).x
8 │ │ }
  │ ╰─^

error: Unexpected `end of file`, expected expression
  ┌─ testinput:2:9
  │
2 │     reg;
  │         ^ expected expression here
